[gd_scene load_steps=2 format=3 uid="uid://qdqlhdyxoycs"]

[ext_resource type="Script" path="res://addons/datalogue/ui/forms/create_form.gd" id="1_f4vkt"]

[node name="CreateForm" type="Control"]
minimum_size = Vector2(200, 100)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1024.0
offset_bottom = -600.0
script = ExtResource( "1_f4vkt" )

[node name="MainLayout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IdEdit" type="LineEdit" parent="MainLayout"]
offset_right = 200.0
offset_bottom = 31.0
placeholder_text = "Enter a unique ID"

[node name="ErrorLbl" type="Label" parent="MainLayout"]
modulate = Color(0.84, 0.21, 0.21, 1)
offset_top = 35.0
offset_right = 200.0
offset_bottom = 61.0
text = "Error!"

[node name="ButtonLayout" type="HBoxContainer" parent="MainLayout"]
offset_top = 65.0
offset_right = 200.0
offset_bottom = 96.0

[node name="CancelBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_right = 60.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
text = "Cancel"

[node name="Spacer" type="Control" parent="MainLayout/ButtonLayout"]
offset_left = 64.0
offset_right = 136.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="CreateBtn" type="Button" parent="MainLayout/ButtonLayout"]
offset_left = 140.0
offset_right = 200.0
offset_bottom = 31.0
theme_override_font_sizes/font_size = 16
disabled = true
text = "Create"

[connection signal="text_change_rejected" from="MainLayout/IdEdit" to="." method="_on_IdEdit_text_change_rejected"]
[connection signal="text_changed" from="MainLayout/IdEdit" to="." method="_on_IdEdit_text_changed"]
[connection signal="text_submitted" from="MainLayout/IdEdit" to="." method="_on_IdEdit_text_submitted"]
[connection signal="pressed" from="MainLayout/ButtonLayout/CancelBtn" to="." method="_on_CancelBtn_pressed"]
[connection signal="pressed" from="MainLayout/ButtonLayout/CreateBtn" to="." method="_on_CreateBtn_pressed"]
